# PlantGuard

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  Model_Training.ipynb  README.md  Vatsalya_Plant_Disease_Classification.ipynb  evaluate.py.py  grad_cam_hard_code.py  main.py  main2.py  pyproject.toml  requirements.txt  requirements.txt.txt  server1.py  train.py.py
artifacts/: README.md
artifacts/cnn_resnet50_disease_apple/: labels.json
artifacts/cnn_resnet50_disease_corn_maize/: labels.json
artifacts/cnn_resnet50_disease_grape/: labels.json
artifacts/cnn_resnet50_disease_pepper_bell/: labels.json
artifacts/cnn_resnet50_disease_potato/: labels.json
artifacts/cnn_resnet50_disease_tomato/: labels.json
artifacts/vit_resnet50_plant/: labels.json
models/: 1.keras  2.keras  NewDisease(AUG)_raw.pth  NewDisease(AUG)_resnet50.pth  PlantVilliage_v2.pt
plant_disease/: __init__.py  data_preprocessing.py  grad_cam.py  inference.py  model_artifacts.py  model_registry.py  utils.py
plant_disease/Plant_Classification_resnet50/: data_preprocessing_TL.py  plant_classification_TL.py  test_model.py  train_TL.py
plant_disease/db/: __init__.py  models.py  repo.py
plantguard/: pyvenv.cfg
scripts/: smoke_test.py
src/: Button.py  Buzzer.py  LCD.py  LED.py  data_preprocessing.py  grad_cam.py  hardware.py  hindi.py  inference.py  model.py  model_artifacts.py  model_catalog.py  model_registry.py  train.py  utils.py
static/: scripts.js  style.css
train/: README.md  model.py  train.py  train_vit.py
views/: about.html  contact.html  dashboard.html  docs.html  faq.html  index.html  record-video.html  upload-images.html  view-images.html
(+22 files in other folders)
